[package]
name = "ultimate_tex_lib"
version = "0.3.0"
edition = "2021"

[dependencies]
nutexb = { path = "C:/Users/kjjkjj/Desktop/rust/nutexb-master/nutexb", features = ["ddsfile"] }
bntx = { git = "https://github.com/ScanMountGoat/bntx", rev = "7d274e1" }
image_dds = "0.7.0"
image = "0.25.5"
strum = { version = "0.24", features = ["derive"] }